uploading the web design for more test

--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- displays site properly based on user's device -->
 
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300;400;600&display=swap" rel="stylesheet">
     <link
+    
       rel="icon"
       type="image/png"
       sizes="32x32"
@@ -30,10 +33,14 @@
     <div class="container">
       <div class="card">
         <div class="card-body">
-          <div class="card-logo"><p>Base Apparel</p></div>
+          <div class="card-logo">
+            <div class="card-image">
+              <img src="./images/logo.svg" alt="idk">
+            </div>
+            </div>
           <div class="title">
             <h1>
-              <span>We're</span>
+              <span class="were">We're</span>
               <span>coming</span> soon
             </h1>
           </div>
